[gd_scene load_steps=5 format=3 uid="uid://d00l8td5occwo"]

[ext_resource type="Script" uid="uid://f3q0oeye1my4" path="res://src/Utility/Outdated/SoundSettings.gd" id="2"]

[sub_resource type="Resource" id="Resource_2v8np"]
metadata/__load_path__ = "res://src/UI/CaveStoryShadow.tres"

[sub_resource type="Resource" id="Resource_101ju"]
metadata/__load_path__ = "res://src/UI/CaveStoryShadow.tres"

[sub_resource type="Resource" id="Resource_1q8mx"]
metadata/__load_path__ = "res://src/UI/CaveStoryShadow.tres"

[node name="SoundSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 512.0
offset_bottom = 288.0
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 496.0
offset_bottom = 272.0
clip_contents = false
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
offset_right = 256.0
offset_bottom = 98.0
custom_minimum_size = Vector2(256, 0)

[node name="MasterLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
offset_right = 256.0
offset_bottom = 10.0
theme_override_fonts/font = SubResource("Resource_2v8np")
text = "Master Volume: 100'/."

[node name="MasterSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer"]
offset_top = 14.0
offset_right = 256.0
offset_bottom = 30.0
max_value = 20.0
value = 10.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
offset_top = 34.0
offset_right = 256.0
offset_bottom = 44.0
theme_override_fonts/font = SubResource("Resource_101ju")
text = "Music Volume: 100'/."

[node name="MusicSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer"]
offset_top = 48.0
offset_right = 256.0
offset_bottom = 64.0
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
offset_top = 68.0
offset_right = 256.0
offset_bottom = 78.0
theme_override_fonts/font = SubResource("Resource_1q8mx")
text = "SFX Volume: 100'/."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer"]
offset_top = 82.0
offset_right = 256.0
offset_bottom = 98.0
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
